traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:21: error: Unmatched closing brace '}' ignored here
      }
      ^